chore: web-responsive

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
         <div class="box-photo" id="photo-04"></div>
         <div class="box-photo" id="photo-05"></div>
         <div class="box-photo" id="photo-06"></div>       
-      </div>
-      <div class="photos">
+      <!-- </div>
+      <div class="photos"> -->
         <div class="box-photo" id="photo-07"></div>
         <div class="box-photo" id="photo-08"></div>
         <div class="box-photo" id="photo-09"></div>
