--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
     <link rel="stylesheet" href="./styles/options.css" />
     <link rel="stylesheet" href="./styles/photos.css" />
     <link rel="stylesheet" href="./styles/footer.css" />
+    <link rel="stylesheet" href="./styles/animation.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap" rel="stylesheet" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <header id="header-main">
@@ -73,6 +78,12 @@
             <h1 class="title">Nós sabemos que ele é da família.</h1></br>
             <p>Sou um subtítulo. Clique aqui para editar. É fácil!</p>
         </div>
+        <div id="container-carrosel">
+          <div class="carrosel" id="back-01"></div>
+          <div class="carrosel" id="back-02"></div>
+          <div class="carrosel" id="back-03"></div>
+          <div class="carrosel" id="back-04"></div>    
+        </div>
         <div class="title" id="chat">
             <p>Vamos conversar por chat!</p>
         </div>
@@ -118,9 +129,7 @@
         <div class="box-photo" id="photo-03"></div>
         <div class="box-photo" id="photo-04"></div>
         <div class="box-photo" id="photo-05"></div>
-        <div class="box-photo" id="photo-06"></div>       
-      <!-- </div>
-      <div class="photos"> -->
+        <div class="box-photo" id="photo-06"></div>
         <div class="box-photo" id="photo-07"></div>
         <div class="box-photo" id="photo-08"></div>
         <div class="box-photo" id="photo-09"></div>
