chore: page responsive

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
         <div id="bottom-options">
           <div id="container-box-options">
-            <div class="box-options">     
+            <div class="box-options" id="box-history">     
               <img class="img-options" src="./assets/img-history.png" alt="Imagem de um coração um balão de conversa">
               <h1 class="title">Nossa História</h1>
               <p>Sou um parágrafo. Clique aqui para adicionar o seu próprio texto.</p>
